2006-03-11  Crestez Leonard  <cdleonard@gmail.com>

	* TaskItem.cs: Cleaned up.

2006-03-11  Marek Sieradzki  <marek.sieradzki@gmail.com> 

	* CommandLineBuilder.cs: Corrected exceptions throwing.
	* TaskItem.cs: Fixed MetadataNames property.

2006-02-26  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* CommandLineBuilder.cs: Fixed a typo.
	* HostObjectInitializationStatus.cs: Fixed order.
	* ToolTask.cs: Updated for new API.

2006-02-25  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* HostObjectInitializationStatus.cs: Added.

2006-02-25  Marek Sieradzki  <marek.sieradzki@gmail.com> 

	* CommandLineBuilder.cs, Logger.cs, TaskLoggingHelper.cs, ToolTask.cs
	: Updated API.

2006-02-24  Marek Sieradzki  <marek.sieradzki@gmail.com> 

	* AppDomainIsolatedTask.cs, Task.cs: Quick hacks to make it compile with
	new API.

2005-09-22  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* CommandLineBuilder.cs, Logger.cs, AppDomainIsolatedTask.cs,
	ToolTask.cs, TaskItem.cs, Task.cs, ToolLocationHelper.cs,
	TargetDotNetFrameworkVersion.cs, ConcurrentLoggingHelper.cs,
	TaskLoggingHelper.cs: Added #if NET_2_0.

2005-09-21  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* ToolTask.cs: Formatting.
	* TaskItem.cs: Removed obsoleted code.
	* ToolLocationHelper.cs: Formatting.

2005-09-09  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* CommandLineBuilder.cs, Logger.cs, AppDomainIsolatedTask.cs,
	ConcurrentLoggingHelper.cs, TaskLoggingHelper.cs: Changed protected
	fields to private.

2005-08-30  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* TaskItem.cs, TaskLoggingHelper.cs: Formatting.

2005-08-27  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* Logger.cs: Formatting.
	* ToolTask.cs: Added error/warning handling.
	* TaskLoggingHelper.cs: Fixed LogErrorFromException ().

2005-08-24  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* CommandLineBuilder.cs: Added checking for null values.
	* ToolTask.cs: Added real execution.
	* Task.cs: Changed all fields to private.